--- a/PolisBlog.css
+++ b/PolisBlog.css
@@ -4,7 +4,12 @@
 					/*/////////////////////////////General Shit///////////////////////////////*/
 
 
-body {background-color: #f5f9fa;
+body {
+	background-color: #f5f9fa;
+	background-image: url(Images/bg-6-full.jpg);
+    background-repeat: repeat;
+	background-size: 30% 30%;
+
 }
 
 /* Colors
@@ -19,8 +24,18 @@ Blue: #16ade9
 h1 {
 	color: #f5f9fa;
 	margin-left: 5%; 
+	
 
 }
+
+
+#blogheader h1 {
+	color: #f5f9fa;
+	margin-left: 5%; 
+position: relative;
+bottom: 10px;
+}
+
 
 
 h4 {
@@ -67,10 +82,10 @@ h4 {
 
 #navfooter {
 	background-color: #f67d00; 
-	z-index: 1000; 
+	z-index: 2000; 
 	float: left;
 	width: 100%;
-	z-index: 1;
+	height: 10px;
 
 }
 
@@ -112,9 +127,13 @@ position: relative;
 #blogheader { 
 background-color: #16ade9; 
 position: relative; 
-	bottom: 60px;
+	bottom: 55px;
 	height: 70px;
-}
+	border-top: 10px solid #323c46;
+	-webkit-box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.37);
+	-moz-box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.37);
+	box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.37);
+	}
 
 #mainwrapper {
 	position: relative; 
@@ -123,6 +142,7 @@ position: relative;
 
 #blogpost {
 	width: 55%;
+	min-width: 500px;
 	margin-left: 5%; 
 	float: left;
 	padding: 0px;
@@ -185,7 +205,25 @@ position: relative;
 	box-shadow: inset 0 0 0 1000px rgba(0,0,0,.5);
 	height: 200px; 
 	position: relative; 
-	bottom: 30px;
+	bottom: 22px;
 	z-index: 0;
 }
+
+
+					/*/////////////////////////////Sharing CSS///////////////////////////////*/
+
+
+#share-buttons {
+float: right; 
+margin-right: 10px;
+margin-bottom: 10px;
+}
+#share-buttons img {
+width: 35px;
+border: 0;
+box-shadow: 0;
+display: inline;
+margin: 5px;
+}
+
 
