--- a/PolisBlog.css
+++ b/PolisBlog.css
@@ -188,6 +188,25 @@ position: relative;
 	diplay: inline;
 }
 
+.thumbnail{
+		border-radius: 10px;
+
+}
+
+.posts img {
+	width: 100%;
+	border-radius: 10px;
+	border: 1px solid black;
+	background-image: fill;
+	
+}
+
+.posts .thumbnail h3 {
+	background-color: blue;
+}
+
+
+
 #bannerImage {
 	margin-left: 2.5%;
 	margin-right: 2.5%;
@@ -224,6 +243,87 @@ border: 0;
 box-shadow: 0;
 display: inline;
 margin: 5px;
+}
+
+
+					/*/////////////////////////////Comment Box///////////////////////////////*/
+
+#commentbox {
+		background-color: #16ade9; 
+		height: 200px;
+		width: 100%; 
+		-webkit-box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.37);
+	-moz-box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.37);
+	box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.37);
+
+	
+	}
+
+
+
+
+
+#commentboxleft button  {
+	
+	background-color: #323c46; 
+	color: #f5f9fa; 
+	border-radius: 5px;
+	margin-left: 5%;
+} 
+
+#commentboxleft h3 {
+	
+		margin-left: 5%; 
+
+}
+
+
+#commentboxleft textarea {
+	width: 90%;
+	margin-left: 5%; 
+	margin-right: 5%; 
+	-webkit-box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.37);
+	-moz-box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.37);
+	box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.37);
+	border-radius: 5px;	
+
+} 
+
+#commentboxleft {
+	
+	width: 50%; 
+	margin-left: 5%;
+	margin-right: 5%;
+	margin-top: 2%;
+	float: left;
+}
+
+#commentboxright {
+	
+	width: 30%; 
+	margin-left: 5%;
+	margin-right: 5%;
+	margin-top: 2%;
+	background-color: #16ade9; 
+	float: right;
+}
+#commentboxright ul{
+	list-style: none;
+	background-color: white; 
+	border: 2px solid #323c46;
+	height: 100px;
+	color: #323c46;
+	-webkit-box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.37);
+	-moz-box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.37);
+	box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.37);
+		border-radius: 5px;	
+
+}
+
+					/*/////////////////////////////Footer///////////////////////////////*/
+					
+footer {
+	background-color: #323c46;
 }
 
 
