--- a/PolisBlog.css
+++ b/PolisBlog.css
@@ -1,14 +1,18 @@
 @charset "UTF-8";
 /* CSS Document */
 
+ /* fonts  */
+
+@import url(http://fonts.googleapis.com/css?family=Raleway:400,500,700|Josefin+Sans:400,700);
 					/*/////////////////////////////General Shit///////////////////////////////*/
 
 
+
 body {
-	background-color: #f5f9fa;
+	background-color: #f1f3f2;
 	background-image: url(Images/bg-6-full.jpg);
     background-repeat: repeat;
-	background-size: 30% 30%;
+	background-size: 50% 30%;
 
 }
 
@@ -18,13 +22,14 @@ Black: #323c46
 Orange: #f67d00
 Blue: #16ade9
   */
+  
 					/*/////////////////////////////Text///////////////////////////////*/
 
 
 h1 {
 	color: #f5f9fa;
 	margin-left: 5%; 
-	
+	font-family: 'Josefin Sans', sans-serif;
 
 }
 
@@ -32,8 +37,8 @@ h1 {
 #blogheader h1 {
 	color: #f5f9fa;
 	margin-left: 5%; 
-position: relative;
-bottom: 10px;
+width: 40%; 
+float: left; 
 }
 
 
@@ -49,6 +54,7 @@ h4 {
 	color: #323c46;
 	margin-left: 20px; 
 	margin-right: 20px;
+	font-family: 'Josefin Sans', sans-serif;
 
 
 }
@@ -56,6 +62,7 @@ h4 {
 #blogpost h3 {
 	color: #f67d00;
 	margin-left: 20px;
+	font-family: 'Josefin Sans', sans-serif;
 }
 
 
@@ -77,8 +84,17 @@ h4 {
 	color: #f8f9fa; 
 	font-family: gearus serif; 
 	margin-left: 40px;
+	margin-top: 0px; 
+	margin-bottom: 0px; 
+
 	font-size: 30px;
 }
+
+#logo small {
+	color: white; 
+	font-family: gearus ; 
+	font-size: 18px; 
+	}
 
 #navfooter {
 	background-color: #f67d00; 
@@ -92,6 +108,7 @@ h4 {
 #defaultNavbar1 ul li  {
 	
 	margin-right: 150px; 
+	font-family: 'Raleway', sans-serif;
 }
 
 #defaultNavbar1 ul li :hover{
@@ -127,6 +144,7 @@ position: relative;
 #blogheader { 
 background-color: #16ade9; 
 position: relative; 
+overflow: auto;
 	bottom: 55px;
 	height: 70px;
 	border-top: 10px solid #323c46;
@@ -139,6 +157,10 @@ position: relative;
 	position: relative; 
 	bottom: 20px;
 }
+
+					/*/////////////////////////////BlogPosts///////////////////////////////*/
+
+
 
 #blogpost {
 	width: 55%;
@@ -154,6 +176,25 @@ position: relative;
 	border-radius: 5px;
 
 	}
+	
+	
+#blogpost ol {
+	
+	margin: 20px; 
+	border-top: 1px solid orange; 
+	border-bottom: 1px solid orange; 
+	font-family: 'Raleway', sans-serif;
+	font-weight: 800; 
+
+
+	}
+	
+#blogpost p {
+		font-family: 'Raleway', sans-serif;
+}
+	
+	
+	
 	
 #sidebar {
 	width: 30%;
@@ -229,15 +270,33 @@ position: relative;
 }
 
 
-					/*/////////////////////////////Sharing CSS///////////////////////////////*/
+					/*/////////////////////////////Social Media CSS///////////////////////////////*/
 
 
-#share-buttons {
+
+#share-buttons-top {
+float: right; 
+display: inline;
+width: 30%; 
+}
+
+#share-buttons-top img {
+border: 0;
+box-shadow: 0;
+display: inline;
+margin: 10px;
+margin-bottom: 15px;
+width: 12%; 
+
+}
+
+#share-buttons-bottom {
 float: right; 
 margin-right: 10px;
 margin-bottom: 10px;
 }
-#share-buttons img {
+
+#share-buttons-bottom img {
 width: 35px;
 border: 0;
 box-shadow: 0;
